[gd_scene load_steps=29 format=2]

[ext_resource path="res://MainMenu/BackToMenu.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/PixelRPG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu/MainMenu.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/Nute.png" type="Texture" id=5]
[ext_resource path="res://MainMenu/bionicle-training-card-font-2-4.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://MainMenu/plank.jpg" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 110, 62 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.776471, 0.309804, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.776471, 0.309804, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=6]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.776471, 0.309804, 0.105882, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.0980392 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.196078 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 65, 65 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StreamTexture" id=23]
load_path = "res://.import/NewGame.png-2f93affc373e658c8b726429f3a5c0b3.stex"

[sub_resource type="StyleBoxTexture" id=20]
texture = SubResource( 23 )
region_rect = Rect2( 0, 0, 65, 65 )

[node name="BackToMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Label5" type="Label" parent="."]
margin_left = 40.0
margin_top = 22.0
margin_right = 280.0
margin_bottom = 158.0
custom_styles/normal = SubResource( 11 )

[node name="Label6" type="Label" parent="."]
margin_left = 43.0
margin_top = 25.0
margin_right = 277.0
margin_bottom = 155.0
custom_styles/normal = SubResource( 22 )

[node name="Label2" type="Label" parent="."]
margin_left = 108.0
margin_top = 8.0
margin_right = 212.0
margin_bottom = 37.0
custom_styles/normal = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Paused"
align = 1
valign = 1

[node name="Resume1" type="Label" parent="."]
margin_left = 118.0
margin_top = 118.0
margin_right = 202.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
align = 1
valign = 1

[node name="Resume2" type="Label" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 200.0
margin_bottom = 145.0
custom_styles/normal = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 120.0
margin_top = 120.0
margin_right = 200.0
margin_bottom = 145.0

[node name="Resume_Button" type="Button" parent="MarginContainer"]
margin_right = 80.0
margin_bottom = 25.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Resume"

[node name="MainMenu1" type="Label" parent="."]
margin_left = 143.0
margin_top = 63.0
margin_right = 177.0
margin_bottom = 97.0
custom_styles/normal = SubResource( 19 )

[node name="MainMenu2" type="Label" parent="."]
margin_left = 146.0
margin_top = 66.0
margin_right = 174.0
margin_bottom = 94.0
custom_styles/normal = SubResource( 18 )

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = 143.0
margin_top = 63.0
margin_right = 177.0
margin_bottom = 97.0

[node name="MainMenu_Button" type="Button" parent="MarginContainer3"]
margin_right = 34.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 14 )
icon_align = 1
expand_icon = true

[node name="MainMenu3" type="Label" parent="."]
margin_left = 145.0
margin_top = 65.0
margin_right = 175.0
margin_bottom = 95.0
custom_styles/normal = SubResource( 15 )

[node name="Music1" type="Label" parent="."]
margin_left = 197.0
margin_top = 63.0
margin_right = 231.0
margin_bottom = 97.0
custom_styles/normal = SubResource( 19 )

[node name="Music2" type="Label" parent="."]
margin_left = 200.0
margin_top = 66.0
margin_right = 228.0
margin_bottom = 94.0
custom_styles/normal = SubResource( 18 )

[node name="MarginContainer5" type="MarginContainer" parent="."]
margin_left = 197.0
margin_top = 63.0
margin_right = 231.0
margin_bottom = 97.0

[node name="Music_Button" type="Button" parent="MarginContainer5"]
margin_right = 34.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 14 )
icon_align = 1
expand_icon = true

[node name="Music3" type="Label" parent="."]
margin_left = 199.0
margin_top = 65.0
margin_right = 229.0
margin_bottom = 95.0
custom_styles/normal = SubResource( 21 )

[node name="NewGame1" type="Label" parent="."]
margin_left = 89.0
margin_top = 63.0
margin_right = 123.0
margin_bottom = 97.0
custom_styles/normal = SubResource( 19 )

[node name="NewGame2" type="Label" parent="."]
margin_left = 92.0
margin_top = 66.0
margin_right = 120.0
margin_bottom = 94.0
custom_styles/normal = SubResource( 18 )

[node name="MarginContainer4" type="MarginContainer" parent="."]
margin_left = 89.0
margin_top = 63.0
margin_right = 123.0
margin_bottom = 97.0

[node name="NewGame_Button" type="Button" parent="MarginContainer4"]
margin_right = 34.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 14 )
icon_align = 1
expand_icon = true

[node name="NewGame3" type="Label" parent="."]
margin_left = 91.0
margin_top = 65.0
margin_right = 121.0
margin_bottom = 95.0
custom_styles/normal = SubResource( 20 )

[connection signal="button_up" from="MarginContainer/Resume_Button" to="." method="_on_Resume_Button_button_up"]
[connection signal="button_up" from="MarginContainer3/MainMenu_Button" to="." method="_on_MainMenu_Button_button_up"]
[connection signal="button_up" from="MarginContainer4/NewGame_Button" to="." method="_on_NewGame_Button_button_up"]
